<resources xmlns:tools="http://schemas.android.com/tools">
	<string name="app_name">LoLin1</string>
	<string name="title_section1">Home</string>
	<string name="title_section2">Jungle Timers</string>
	<string name="title_section3">Champions</string>
	<string name="title_section4">Surrender@20</string>
	<string name="title_section5">Chat</string>
	<string name="navigation_drawer_open">Open navigation drawer</string>
	<string name="navigation_drawer_close">Close navigation drawer</string>
	<string name="action_settings">Settings</string>
	<string name="action_refresh">Refresh</string>
	<string name="error_no_connection" tools:ignore="UnusedResources">Couldn\'t connect to the
		server
	</string>
	<string name="db_name" tools:ignore="UnusedResources">LoLin1_DB</string>
	<string name="lang_pt_simplified">pt_PT</string>
	<string name="lang_en_simplified">en_US</string>
	<string name="lang_tr_simplified">tr_TR</string>
	<string name="lang_el_simplified">el_GR</string>
	<string name="lang_pl_simplified">pl_PL</string>
	<string name="lang_fr_simplified">fr_FR</string>
	<string name="lang_es_simplified">es_ES</string>
	<string name="lang_de_simplified">de_DE</string>
	<string name="lang_ro_simplified">ro_RO</string>
	<string name="lang_it_simplified">it_IT</string>
	<string name="lang_pt">Português</string>
	<string name="lang_en">English</string>
	<string name="lang_tr">Türkçe</string>
	<string name="lang_el">Ελληνικός</string>
	<string name="lang_pl">Polski</string>
	<string name="lang_fr">Français</string>
	<string name="lang_es">Español</string>
	<string name="lang_de">Deutsch</string>
	<string name="lang_ro">Românâ</string>
	<string name="lang_it">Italiano</string>
	<string name="news_euw_en">http://feed43.com/lolnews_euw_en.xml</string>
	<string name="news_euw_de">http://feed43.com/lolnews_euw_de.xml</string>
	<string name="news_euw_es">http://feed43.com/lolnews_euw_es.xml</string>
	<string name="news_euw_fr">http://feed43.com/lolnews_euw_fr.xml</string>
	<string name="news_euw_it">http://feed43.com/lolnews_euw_it.xml</string>
	<string name="news_eune_en">http://feed43.com/lolnews_eune_en.xml</string>
	<string name="news_eune_el">http://feed43.com/lolnews_eune_el.xml</string>
	<string name="news_eune_pl">http://feed43.com/lolnews_eune_pl.xml</string>
	<string name="news_eune_ro">http://feed43.com/lolnews_eune_ro.xml</string>
	<string name="news_br_pt">http://feed43.com/lolnews_br_pt.xml</string>
	<string name="news_na_en">http://feed43.com/lolnews_na_en.xml</string>
	<string name="news_tr_tr">http://feed43.com/lolnews_tr_tr.xml</string>
	<string name="pref_cat_general">GENERAL</string>
	<string name="pref_title_data">Allow data usage</string>
	<string name="pref_summary_data_on">Allow data usage (only when Wi-Fi is not connected)</string>
	<string name="pref_summary_data_off">Forbid the app from working with the data connection
	</string>
	<string name="pref_title_server">League of Legends server</string>
	<string name="server_na">na</string>
	<string name="server_euw">euw</string>
	<string name="server_eune">eune</string>
	<string name="server_br">br</string>
	<string name="server_tr">tr</string>
	<string name="pref_title_lang">Language</string>
	<string name="pref_cat_jun">JUNGLE TIMERS</string>
	<string name="pref_title_display">Keep display on</string>
	<string name="pref_summary_display">While viewing the timers</string>
	<string name="pref_title_baron_respawn">Baron respawn time</string>
	<string name="pref_title_dragon_respawn">Drake respawn time</string>
	<string name="pref_title_buff_respawn">Buff respawn time</string>
	<string name="pref_default_baron_respawn">07:00</string>
	<string name="pref_default_dragon_respawn">06:00</string>
	<string name="pref_default_buff_respawn">05:00</string>
	<string name="pref_cat_chat">CHAT</string>
	<string name="pref_title_username">Username</string>
	<string name="auth_token_label">Full access to a LoLin1 account</string>
	<string name="pref_title_pass">Password</string>
	<string name="pref_cat_about">ABOUT</string>
	<string name="news_empty">No news to show</string>
	<string name="empty_content">Nothing to show</string>
	<string name="pref_title_developer">About the developer</string>
	<string name="title_activity_init">Initializing…</string>
	<string name="title_activity_policy">Privacy policy</string>
	<string name="title_activity_twitter">Share to Twitter</string>
	<string name="title_activity_settings">Settings</string>
	<string name="title_activity_server_and_lang">Initial configuration</string>
	<string name="title_activity_rate">Rate LoLin1</string>
	<string name="tag_fragment_news">News</string>
	<string name="tag_fragment_surr">Surrender@20</string>
	<string name="tag_fragment_champs">Champions</string>
	<string name="news_header">League of Legends News</string>
	<string name="title_activity_web_viewer">LoLin1 Browser</string>
	<string name="ptr_pull_text">Pull to refresh</string>
	<string name="ptr_refreshing_text">Loading…</string>
	<string name="ptr_released_text">Done</string>
	<string name="new_surr_content">New content to read!</string>
	<string name="loading">Loading…</string>
	<string name="title_activity_splash">@string/app_name</string>
	<string name="splash_image_content_description">Splash image</string>
	<string name="legal_jibber_jabber">
		isn\'t endorsed by Riot Games and doesn\'t reflect the views or opinions of
		Riot Games or anyone officially involved in producing or managing League of Legends. League
		of Legends and Riot Games are trademarks or registered trademarks of Riot Games, Inc. League
		of Legends © Riot Games, Inc.
	</string>
	<string name="realm_to_language_list_prefix">lang_</string>
	<string name="language_to_simplified_suffix">_simplified</string>
	<string name="confirm">Confirm</string>
	<string name="no_connection_on_splash">No internet connection detected. Skipping update check.
	</string>
	<string name="no_providers_up">no providers found.</string>
	<string name="provider_application_error_identifier">Application Error</string>
	<string name="provider_application_maintenance_identifier">Application Offline for Maintenance
	</string>
	<string name="delay_update_dialog_title">Delay update?</string>
	<string name="delay_update_dialog_content">There is a content update available, but your device
		active connection is not Wi-Fi. Do you wish to delay the update?
	</string>
	<string name="delay_update_dialog_positive_button">Yes, prompt me next time</string>
	<string name="delay_update_dialog_negative_button">No (might impact your Internet quota)
	</string>
	<string name="update_delayed">update delayed.</string>
	<string name="update_pre_version_check">Querying</string>
	<string name="progress_character">…</string>
	<string name="update_server_is_updating">server is checking for contents, update aborted.
	</string>
	<string name="update_fatal_error">an error occurred, update aborted.</string>
	<string name="update_new_version_found">new version found!</string>
	<string name="update_no_new_version">already at latest version.</string>
	<string name="content_folder_name">content</string>
	<string name="update_allocating_file_structure">Allocating file structure for</string>
	<string name="update_task_finished">done.</string>
	<string name="service_list">/services/champion/list/</string>
	<string name="list_file_name">data.json</string>
	<string name="list_download">Downloading champion information for</string>
	<string name="cdn_download">Retrieving CDN for</string>
	<string name="cdn_key">version</string>
	<string name="update_realm_data_download">Downloading data for</string>
	<string name="champion_list_key">list</string>
	<string name="champion_image_folder">image</string>
	<string name="bust_remote_folder">champion</string>
	<string name="passive_remote_folder">passive</string>
	<string name="splash_progress_bar_speed">0.1f</string>
	<string name="spell_remote_folder">spell</string>
	<string name="splash_remote_folder">splash</string>
	<string name="splash_image_extension">jpg</string>
	<string name="action_champion_list_search">Search</string>
	<string name="champion_search_hint">Look for a champion…</string>
	<string name="friend_search_hint">Look for a friend…</string>
	<string name="bust_image_folder_name">bust</string>
	<string name="symbol_path_separator">/</string>
	<string name="symbol_hyphen">-</string>
	<string name="splash_image_folder_name">splash</string>
	<string name="spell_image_folder_name">spell</string>
	<string name="passive_image_folder_name">passive</string>
	<string name="champion_list_item_content_description">Champion bust</string>
	<string name="champion_detail_title">Champion detail</string>
	<string name="lore_title">Lore</string>
	<string name="range_title">Range:</string>
	<string name="cost_title">Cost:</string>
	<string name="spell_image_description">Spell image</string>
	<string name="cooldown_title">Cooldown:</string>
	<string name="champion_bust_content_description">Champion bust</string>
	<string name="health_title_text">Health:</string>
	<string name="ad_title_text">Attack Damage:</string>
	<string name="as_title_text">Attack Speed:</string>
	<string name="movspeed_title_text">Movement Speed:</string>
	<string name="healthregen_title_text">Health Regen:</string>
	<string name="armor_title_text">Armor:</string>
	<string name="mr_title_text">Magic Resist:</string>
	<string name="placeholder">PLACEHOLDER</string>
	<string name="stat_scaling">(+PLACEHOLDER per level)</string>
	<string name="resource_energy_title_text">Energy:</string>
	<string name="resource_mana_title_text">Mana:</string>
	<string name="resourceregen_energy_title_text">Energy Regen:</string>
	<string name="resourceregen_mana_title_text">Mana Regen:</string>
	<string name="skin_view_content_description">Skin view</string>
	<string name="time_unit_second_plural">seconds</string>
	<string name="champion_ability_icon_content_description">Ability icon</string>
	<string name="jungle_timers_activity">Jungle timers</string>
	<string name="developer_profile_url">https://www.linkedin.com/in/jorgediazbenitosoriano</string>
	<string name="finding_server">Fetching update server</string>
	<string name="chat_credentials_username_component_title">Username</string>
	<string name="chat_credentials_password_component_title">Password</string>
	<string name="chat_authenticator_login_title">Account Manager</string>
	<string name="chat_authenticator_login_button_text">Save account</string>
	<string name="account_type">org.jorge.lolin1</string>
	<string name="account_save_success">Account saved</string>
	<string name="profile_icons_folder_name">profile_icons</string>
	<string name="chat_status_content_description">Chat status</string>
	<string name="profile_icon_content_description">Profile icon</string>
	<string name="no_connection_tap_to_retry">No connection found. Tap to retry.</string>
	<string name="event_chat_overview">org.jorge.lolin1.CHAT_OVERVIEW_EVENT</string>
	<string name="event_login_successful">org.jorge.lolin1.CHAT_LOGIN_SUCCESSFUL_EVENT</string>
	<string name="event_login_failed">org.jorge.lolin1.CHAT_LOGIN_FAILED_EVENT</string>
	<string name="chat_overview_wrong_credentials">
		<![CDATA[It seems that the credentials you are trying to use are not valid. You may fix them under Settings > Account Management.]]></string>
</resources>