<?xml version="1.0" encoding="utf-8"?>

<!--
~ This file is part of LoLin1.
~ <p/>
~ LoLin1 is free software: you can redistribute it and/or modify
~ it under the terms of the GNU General Public License as published by
~ the Free Software Foundation, either version 3 of the License, or
~ (at your option) any later version.
~ <p/>
~ LoLin1 is distributed in the hope that it will be useful,
~ but WITHOUT ANY WARRANTY; without even the implied warranty of
~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
~ GNU General Public License for more details.
~ <p/>
~ You should have received a copy of the GNU General Public License
~ along with LoLin1. If not, see <http://www.gnu.org/licenses/>.
~ <p/>
~ Created by JorgeAntonio on 19/4/2014.
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
	<LinearLayout android:id="@+id/rightmost_contents"
	              android:layout_width="wrap_content"
	              android:layout_height="wrap_content"
	              android:orientation="vertical"
	              android:layout_alignParentRight="true">
		<LinearLayout android:layout_width="wrap_content"
		              android:orientation="horizontal"
		              android:layout_height="wrap_content">
			<TextView android:id="@+id/cost_title"
			          android:textStyle="bold"
			          android:text="@string/cost_title"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"/>
			<TextView
				android:id="@+id/cost_contents"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
		</LinearLayout>
		<LinearLayout android:layout_width="wrap_content"
		              android:orientation="horizontal"
		              android:layout_height="wrap_content">
			<TextView
				android:id="@+id/range_title"
				android:textStyle="bold"
				android:text="@string/range_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
			<TextView android:id="@+id/range_contents"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"/>
		</LinearLayout>
		<LinearLayout android:layout_width="wrap_content"
		              android:orientation="horizontal"
		              android:layout_height="wrap_content">
			<TextView
				android:id="@+id/cooldown_title"
				android:textStyle="bold"
				android:text="@string/cooldown_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
			<TextView android:id="@+id/cooldown_contents"
			          android:layout_width="wrap_content"
			          android:layout_height="wrap_content"/>
		</LinearLayout>
	</LinearLayout>
	<TextView android:id="@+id/ability_name"
	          android:layout_alignParentLeft="true"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"/>
	<TextView android:id="@+id/ability_detail"
	          android:layout_below="@+id/ability_name"
	          android:layout_width="wrap_content"
	          android:layout_height="wrap_content"/>
</RelativeLayout>